# M5HAL

./: CMakeLists.txt  README.md  idf_component.yml  library.json  library.properties
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: clang-format-check.yml  doxygen-gh-pages.yml
src/: M5HAL.hpp
src/m5_hal/: platform_checker.hpp
src/m5_hal/bus/: bus.hpp  i2c.inl
src/m5_hal/gpio/: gpio.hpp
